--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:90%;
+    width:95%;
 }
 
 
