--- a/src/components/header/top-header/top-header.scss
+++ b/src/components/header/top-header/top-header.scss
@@ -17,7 +17,7 @@
         }
         
         .user-name{   
-        font: normal normal 600 25px/34px Open Sans;                     
+        font: normal normal 600 25px/34px Arial;                     
         color:#000000;
         padding-left:17px;
         }                       
